fix long message wrapping issue in one-on-one
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@8172 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_chat.scss
+++ b/src/main/resources/scss/_chat.scss
@@ -78,6 +78,12 @@
 					display: inline-block;
 				}
 
+				div.message-bounding-box{
+					margin-left: 40px;
+					overflow: hidden;
+					position: relative;
+				}
+
 				.log-entry {
 					.name {
 						display: none;
