--- a/src/main/resources/scss/_window-treatments.scss
+++ b/src/main/resources/scss/_window-treatments.scss
@@ -20,6 +20,7 @@
 	}
 
 	.nti-window-header {
+		cursor: move;
 		border-radius: 5px 5px 0 0;
 		background: transparent;
 		border-bottom: 1px solid #ffffff;
